@@ -1,3 +1,8 @@
+2021-01-22 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSWindow.m (GSOrderedWindows): Don't try to handle
+	already gone windows that may be returned from a slow window manager.
+
 2021-01-16 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/GSHorizontalTypesetter.m: Small cleanups for nerged pull request.
